--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "cakephp/migrations": "^3.0",
         "cakephp/plugin-installer": "^1.2",
         "fzaninotto/faker": "^1.9",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "ozee31/cakephp-cors": "^2.0"
     },
     "require-dev": {
         "cakephp/bake": "^2.0.3",
